--- a/index.html
+++ b/index.html
@@ -8,7 +8,35 @@
 </head>
 <body>
     <h1>Hello i'm Jennifer!</h1>
-    <h2>test</h2>
+    <h3>plz fill in this formm :D</h3>
+    <form>
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname">
+
+    </form>
+    <br>
+    <table border = '1'>
+    <tr>
+        <th>Relationship status</th>
+        <td><input type='radio' id ='single'>single pringle</td>
+        <td><input type='radio' id ='single'>taken!!</td>
+    </tr>    
+
+    <tr>
+        <th>Favourite fruitss</th>
+        <td colspan = '2'><input type='checkbox' id='apple'>apple
+            <input type='checkbox' id='orange'>orange 
+            <input type='checkbox' id='lemon'>lemon 
+        </td>
+                
+
+    </tr>
+
+    <tr><td colspan= '3'><input type='submit'value='submit'></td></tr>
+    </table>
 </body>
 </html>
+
 
