--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello i'm Jennifer!</h1>
-    <h3>plz fill in this formm :D</h3>
+    <h1>Hello I'm Kelsie!</h1>
+    <img src = '/test.png' alt ='pp' class='pp' style="width:200px;height:200px;">
+    <p>Hi there! Nice to meet you :DD Let's be friends! </p>    
     <form>
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname"><br>
         <label for="lname">Last name:</label><br>
         <input type="text" id="lname" name="lname">
-
     </form>
     <br>
     <table border = '1'>
@@ -23,7 +23,7 @@
         <td><input type='radio' id ='single'>single pringle</td>
         <td><input type='radio' id ='single'>taken!!</td>
     </tr>    
-
+    
     <tr>
         <th>Favourite fruitss</th>
         <td colspan = '2'><input type='checkbox' id='apple'>apple
@@ -34,9 +34,7 @@
 
     </tr>
 
-    <tr><td colspan= '3'><input type='submit'value='submit'></td></tr>
+    <tr><td colspan= '3'><input type='submit' value='submit'></td></tr>
     </table>
 </body>
 </html>
-
-
