--- a/index.html
+++ b/index.html
@@ -260,29 +260,29 @@
     <section class="section bg-funfact" id="funfact">
       <div class="container">
         <div>
-          <h3 class="text-center text-light">Some facts about me</h3>
+          <h3 class="text-center text-secondary">Some facts about me</h3>
         </div>
         <div class="row" id="counter">
           <div class="col-lg-3">
-            <div class="text-center lan_funfact p-4 mt-3 rounded text-white">
-              <h1 class="lan_fun_value mb-1" data-count="654">Indonesia</h1>
-              <p class="lan_fun_name mb-0">I was born here</p>
+            <div class="text-center lan_funfact p-4 mt-3 rounded text-secondary">
+              <h1 class="lan_fun_value mb-1 " data-count="654">Taiwan</h1>
+              <p class="lan_fun_name mb-0">is my favourite country</p>
             </div>
           </div>
           <div class="col-lg-3">
-            <div class="text-center lan_funfact p-4 mt-3 rounded text-white">
+            <div class="text-center lan_funfact p-4 mt-3 rounded text-secondary">
               <h1 class="lan_fun_value mb-1" data-count="6400">Sushi</h1>
               <p class="lan_fun_name mb-0">is my favourite food</p>
             </div>
           </div>
           <div class="col-lg-3">
-            <div class="text-center lan_funfact p-4 mt-3 rounded text-white">
+            <div class="text-center lan_funfact p-4 mt-3 rounded text-secondary">
               <h1 class="lan_fun_value mb-1" data-count="2389">5</h1>
               <p class="lan_fun_name mb-0">I can speak 5 languages</p>
             </div>
           </div>
           <div class="col-lg-3">
-            <div class="text-center lan_funfact p-4 mt-3 rounded text-white">
+            <div class="text-center lan_funfact p-4 mt-3 rounded text-secondary">
               <h1 class="lan_fun_value mb-1" data-count="653">Cookies</h1>
               <p class="lan_fun_name mb-0">I bake them when I'm free</p>
             </div>
@@ -339,7 +339,7 @@
                             <span class="font-weight-bold">Facilitator</span> , SMU ICON Freshmen Orientation 
                          </li>
                          <li class="list-item">
-                            <span class="font-weight-bold">Member</span> , .Hack 
+                            <span class="font-weight-bold">Member</span> , SMU .Hack 
                          </li>
                          <li class="list-item">
                             <span class="font-weight-bold">Member</span> , SMU Product Club 
@@ -350,6 +350,13 @@
                          <li class="list-item">
                             <span class="font-weight-bold">Member</span> , SMU Funk Movement 
                          </li>
+                         <li class="list-item">
+                            <span class="font-weight-bold">Member</span> , SMU Business Analytics and Intelligence 
+                         </li>
+                         <li class="list-item">
+                            <span class="font-weight-bold">Member</span> , SMU Whitehats Society 
+                         </li>
+                         
                          </ul>
                     </div>
                   </div>
@@ -689,7 +696,7 @@
                   <div class="col-sm-12 text-right">
                     <input
                       type="submit"
-                      class="btn btn-custom"
+                      class="btn btn-secondary"
                       value="Send Message"
                     />
                   </div>
