changed text color

--- a/index.html
+++ b/index.html
@@ -266,25 +266,25 @@
           <div class="col-lg-3">
             <div class="text-center lan_funfact p-4 mt-3 rounded text-secondary">
               <h1 class="lan_fun_value mb-1 " data-count="654">Taiwan</h1>
-              <p class="lan_fun_name mb-0">is my favourite country</p>
+              <p class="lan_fun_name mb-0 text-secondary" >is my favourite country</p>
             </div>
           </div>
           <div class="col-lg-3">
             <div class="text-center lan_funfact p-4 mt-3 rounded text-secondary">
               <h1 class="lan_fun_value mb-1" data-count="6400">Sushi</h1>
-              <p class="lan_fun_name mb-0">is my favourite food</p>
+              <p class="lan_fun_name mb-0 text-secondary">is my favourite food</p>
             </div>
           </div>
           <div class="col-lg-3">
             <div class="text-center lan_funfact p-4 mt-3 rounded text-secondary">
               <h1 class="lan_fun_value mb-1" data-count="2389">5</h1>
-              <p class="lan_fun_name mb-0">I can speak 5 languages</p>
+              <p class="lan_fun_name mb-0 text-secondary">I can speak 5 languages</p>
             </div>
           </div>
           <div class="col-lg-3">
             <div class="text-center lan_funfact p-4 mt-3 rounded text-secondary">
               <h1 class="lan_fun_value mb-1" data-count="653">Cookies</h1>
-              <p class="lan_fun_name mb-0">I bake them when I'm free</p>
+              <p class="lan_fun_name mb-0 text-secondary">I bake them when I'm free</p>
             </div>
           </div>
         </div>
