--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             </div>
           </div>
         </div>
-        <div class="row mt-4 pt-4 ml-4">
+        <div class="row mt-4 pt-4">
           <div class="col-lg-12">
             <div class="cv_edu_exp mt-3">
               <div class="cv_edu_exp_box mt-4">
