fixed spelling mistake

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                             <span class="font-weight-bold">Member</span> , SMU Funk Movement 
                          </li>
                          <li class="list-item">
-                            <span class="font-weight-bold">Member</span> , SMU Business Analytics and Intelligence 
+                            <span class="font-weight-bold">Member</span> , SMU Business Intelligence and Analytics 
                          </li>
                          <li class="list-item">
                             <span class="font-weight-bold">Member</span> , SMU Whitehats Society 
