--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My personal website!</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!--Bootstrap Css-->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -101,7 +102,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-12">
-            <div class="text-center mx-auto section-main-title">
+            <div class="text-center mx-auto section-main-title " data-aos="fade-up">
               <h2><span class="font-weight-bold">About </span>Me</h2>
               <div class="main-title-border">
                 <i class="mdi mdi-asterisk"></i>
@@ -124,7 +125,7 @@
                 class="img-fluid mx-auto d-block"
               />
             </div>
-            <div class="text-center about-detail mx-auto mt-5">
+            <div class="text-center about-detail mx-auto mt-5 " data-aos="fade-up">
               <h3 class="mb-3">
                 Hello!
                 <span class="font-weight-bold text-custom"
@@ -158,7 +159,7 @@
         </div>
         <div class="row mt-5">
           <div class="col-lg-6">
-            <div class="progress-bars skill-custom">
+            <div class="progress-bars skill-custom" data-aos="flip-up">
               <div class="clearfix">
                 <div class="text-dark font-weight-bold float-left">Python</div>
                 <div class="text-muted float-right">60%</div>
@@ -309,8 +310,8 @@
             </div>
           </div>
         </div>
-        <div class="row mt-4 pt-4">
-          <div class="col-lg-12">
+        <div class="row mt-4 pt-4" >
+          <div class="col-lg-12" data-aos="fade-up">
             <div class="cv_edu_exp mt-3">
               <div class="cv_edu_exp_box mt-4">
                 <div class="row">
@@ -365,7 +366,7 @@
 
               <div class="cv_edu_exp_box mt-4">
                 <div class="row">
-                  <div class="col-lg-12">
+                  <div class="col-lg-12" data-aos="fade-up">
                     <div
                       class="cv_edu_exp_year font-weight-bold text-custom position-relative"
                     >
@@ -402,7 +403,7 @@
     <!-- START CTA -->
     <section class="section bg-cta">
       <div class="bg-overlay"></div>
-      <div class="container">
+      <div class="container" data-aos="zoom-in">
         <div class="row">
           <div class="col-lg-12">
             <div class="text-center text-white">
@@ -580,7 +581,7 @@
 
     <!-- CONTACT FORM START-->
     <section class="section" id="contact">
-      <div class="container">
+      <div class="container" data-aos="fade-up">
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="text-center mx-auto section-main-title">
@@ -722,7 +723,11 @@
       </div>
     </section>
     <!-- END FOOTER -->
-
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+  
 
     </body>
 </html>
