changed some animation

--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
             Some things I am currently learning:</span
           >
         </div>
-        <div class="row mt-5">
+        <div class="row mt-5" >
           <div class="col-lg-6">
-            <div class="progress-bars skill-custom" data-aos="flip-up">
+            <div class="progress-bars skill-custom">
               <div class="clearfix">
                 <div class="text-dark font-weight-bold float-left">Python</div>
                 <div class="text-muted float-right">60%</div>
