--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- Custom style Css -->
     <link rel="stylesheet" href="css/style.css" />
+   <!-- mouse -->
+   <link rel="stylesheet" href="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.css">
+
+   <script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
+  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+
+   <script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
+   
+  
+  
   </head>
 
   <body>
@@ -56,7 +67,7 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-lg-12">
-                <div class="text-white text-center">
+                <div class="text-white text-center " data-cursor-text="Welcome" data-cursor-stick>
                   <h3>Welcome to</h3>
                     <h1 class="header_title mb-0 mt-3"> <span class="font-weight-bold">Kelsie's </span>Website </h1>
                         <ul class="social_home list-unstyled text-center pt-4">
@@ -261,12 +272,12 @@
     <section class="section bg-funfact" id="funfact">
       <div class="container">
         <div>
-          <h3 class="text-center text-secondary">Some facts about me</h3>
+          <h3 class="text-center text-secondary">Some facts about me. Hover to find out more!</h3>
         </div>
         <div class="row" id="counter">
           <div class="col-lg-3">
             <div class="text-center lan_funfact p-4 mt-3 rounded text-secondary">
-              <h1 class="lan_fun_value mb-1 " data-count="654">Taiwan</h1>
+              <h1 class="lan_fun_value mb-1 " data-count="654" data-cursor-img="images/taiwan.avif">Taiwan</h1>
               <p class="lan_fun_name mb-0 text-secondary" >is my favourite country</p>
             </div>
           </div>
@@ -726,8 +737,13 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
-    </script>
-  
+    </script>  
 
+      <script>
+        const cursor = new MouseFollower({
+        container: document.body  ,
+        speed: 0.3
+      });
+    </script>
     </body>
 </html>
