changed some hovering stuff

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-lg-12">
-                <div class="text-white text-center " data-cursor-text="Welcome" data-cursor-stick>
+                <div class="text-white text-center " data-cursor-text="Welcome">
                   <h3>Welcome to</h3>
                     <h1 class="header_title mb-0 mt-3"> <span class="font-weight-bold">Kelsie's </span>Website </h1>
                         <ul class="social_home list-unstyled text-center pt-4">
@@ -276,26 +276,26 @@
         </div>
         <div class="row" id="counter">
           <div class="col-lg-3">
-            <div class="text-center lan_funfact p-4 mt-3 rounded text-secondary">
-              <h1 class="lan_fun_value mb-1 " data-count="654" data-cursor-img="images/taiwan.avif">Taiwan</h1>
+            <div class="text-center lan_funfact p-4 mt-3 rounded text-secondary"data-cursor-img="images/taiwan.avif">
+              <h1 class="lan_fun_value mb-1 " data-count="654" >Taiwan</h1>
               <p class="lan_fun_name mb-0 text-secondary" >is my favourite country</p>
             </div>
           </div>
           <div class="col-lg-3">
-            <div class="text-center lan_funfact p-4 mt-3 rounded text-secondary">
-              <h1 class="lan_fun_value mb-1" data-count="6400">Sushi</h1>
+            <div class="text-center lan_funfact p-4 mt-3 rounded text-secondary" data-cursor-img="images/sushi.avif">
+              <h1 class="lan_fun_value mb-1" data-count="6400" >Sushi</h1>
               <p class="lan_fun_name mb-0 text-secondary">is my favourite food</p>
             </div>
           </div>
           <div class="col-lg-3">
-            <div class="text-center lan_funfact p-4 mt-3 rounded text-secondary">
-              <h1 class="lan_fun_value mb-1" data-count="2389">5</h1>
+            <div class="text-center lan_funfact p-4 mt-3 rounded text-secondary" data-cursor-img="images/language.avif">
+              <h1 class="lan_fun_value mb-1" data-count="2389"  >5</h1>
               <p class="lan_fun_name mb-0 text-secondary">I can speak 5 languages</p>
             </div>
           </div>
           <div class="col-lg-3">
-            <div class="text-center lan_funfact p-4 mt-3 rounded text-secondary">
-              <h1 class="lan_fun_value mb-1" data-count="653">Cookies</h1>
+            <div class="text-center lan_funfact p-4 mt-3 rounded text-secondary" data-cursor-img="images/cookie.avif">
+              <h1 class="lan_fun_value mb-1" data-count="653" >Cookies</h1>
               <p class="lan_fun_name mb-0 text-secondary">I bake them when I'm free</p>
             </div>
           </div>
