--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             </div>
           </div>
           <div class="col-lg-3">
-            <div class="text-center lan_funfact p-4 mt-3 rounded text-secondary" data-cursor-img="images/cookie.avif">
+            <div class="text-center lan_funfact p-4 mt-3 rounded text-secondary" data-cursor-img="images/cookies.avif">
               <h1 class="lan_fun_value mb-1" data-count="653" >Cookies</h1>
               <p class="lan_fun_name mb-0 text-secondary">I bake them when I'm free</p>
             </div>
