changed some cursor animations

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                       2021 - 2025
                     </div>
                     <div class="cb_edu_exp_detail">
-                      <h4>Studied at Singapore Management University</h4>
+                      <h4 data-cursor-img="images/smu.jpeg">Studied at Singapore Management University</h4>
                       <p class="cv_desc mb-0">
                         Activities and societies: </p>
 
@@ -384,7 +384,7 @@
                       2019 - 2020
                     </div>
                     <div class="cb_edu_exp_detail">
-                      <h4>Studied At Anderson Serangoon Junior College</h4>
+                      <h4 data-cursor-img="images/anderson.jpeg">Studied At Anderson Serangoon Junior College</h4>
                       <p class="cv_desc mb-0">
                         Activities and societies: </p>
 
