changed some font sizes

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="text-white text-center " data-cursor-text="Welcome">
                   
                   <h3>Hi I'm Kelsie :)</h3>
-                    <h1 class="header_title mb-0 mt-3"> I am a
+                    <h1 class="header_title mb-0 mt-3" style="font-size: 55px;"> I am a
       
                       <span class = 'text-warning type font-weight-bold '></span></h1>
                         <ul class="social_home list-unstyled text-center pt-4">
@@ -144,9 +144,8 @@
             </div>
             <div class="text-center about-detail mx-auto mt-5 " data-aos="fade-up">
               <h3 class="mb-3">
-                Hello!
                 <span class="font-weight-bold text-custom"
-                  >I'M Jennifer Kelsie</span
+                  >Jennifer Kelsie</span
                 >
               </h3>
               <ul class="mb-0 list-inline text-center about-work">
