--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   </ul>
                   <div class="header_btn">
                     <a href="#" class="btn btn-outline-custom btn-rounded mt-4"
-                      >Download my resume</a
+                      >Hope you enjoy your time here! </a
                     >
                   </div>
                 </div>
