--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
 
     <!-- START NAVBAR -->
-    <nav class="navbar navbar-expand-lg fixed-top custom-nav sticky">
+    <nav class="navbar navbar-expand-sm fixed-top custom-nav sticky">
       <div class="container">
         
         <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -69,7 +69,7 @@
         <div class="home-table-center">
           <div class="container">
             <div class="row justify-content-center">
-              <div class="col-lg-12">
+              <div class="col-xl-12">
                 <div class="text-white text-center " data-cursor-text="Welcome">
                   
                   <h3>Hi I'm Kelsie :)</h3>
@@ -102,8 +102,6 @@
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
         </div>
       </div>
       <div class="scroll_down">
