--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
 
     <!-- START NAVBAR -->
-    <nav class="navbar navbar-expand-sm fixed-top custom-nav sticky">
+    <nav class="navbar navbar-expand fixed-top custom-nav sticky">
       <div class="container">
         
         <div class="collapse navbar-collapse" id="navbarCollapse">
