--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
     <!--START HOME-->
  
 
-    <section class="home-bg section h-100vh" id="home">
+    <section class="home-bg section h-100vh" id="fullheight">
       <div class="bg-overlay"></div>
       <div class="home-table">
         <div class="home-table-center">
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-xl-12">
-                <div class="text-white text-center " data-cursor-text="Welcome">
+                <div class="text-white text-center " data-cursor-text="Welcome" >
                   
-                  <h3>Hi I'm Kelsie :)</h3>
+                  <h3 style=" height: 40px;">Hi I'm Kelsie :)</h3>
                     <h1 class="header_title mb-0 mt-3" style="font-size: 55px;"> I am a
       
                       <span class = 'text-warning type font-weight-bold '></span></h1>
