--- a/index.html
+++ b/index.html
@@ -120,22 +120,6 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-12">
-            <div class="text-center mx-auto section-main-title " data-aos="fade-up">
-              <h2><span class="font-weight-bold">About </span>Me</h2>
-              <div class="main-title-border">
-                <i class="mdi mdi-asterisk"></i>
-              </div>
-              <p class="text-muted mx-auto mt-2">
-                I am currently a year 2 student majoring in Information Systems
-                at Singapore Management University who has a strong interest in
-                the field of technology and business. I wish to live life to the
-                fullest and bring a positive impact to the people around me!
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 pt-4">
-          <div class="col-lg-12">
             <div>
               <img
                 src=""
@@ -143,13 +127,13 @@
                 class="img-fluid mx-auto d-block"
               />
             </div>
-            <div class="text-center about-detail mx-auto mt-5 " data-aos="fade-up">
+            <div class="text-center about-detail mx-auto mt-0 " data-aos="fade-up">
               <h3 class="mb-3">
-                <span class="font-weight-bold text-custom"
+                <span class="font-weight-light text-custom font" style="font-size:xx-large"
                   >Jennifer Kelsie</span
                 >
               </h3>
-              <ul class="mb-0 list-inline text-center about-work">
+              <ul class="mb-0 list-inline text-center about-work font-weight-light " style="font-size:x-large; ">
                 <li class="list-inline-item mr-0 text-muted">
                   Aspiring developer /
                 </li>
@@ -164,14 +148,32 @@
           </div>
         </div>
 
+        <div class="row  mt-4 pt-4">
+          <div class="col-lg-12">
+            <div class="text-center mt-2 mx-auto section-main-title " data-aos="fade-up">
+              <h2 style="font-size:xx-large" class = 'font-weight-light'><span class="font-weight-light " style="font-size:xx-large">About </span>Me</h2>
+              <div class="main-title-border">
+                <i class="mdi mdi-asterisk"></i>
+              </div>
+              <p class="text-muted mx-auto mt-2">
+                I am currently a year 2 student majoring in Information Systems
+                at Singapore Management University who has a strong interest in
+                the field of technology and business. I wish to live life to the
+                fullest and bring a positive impact to the people around me!
+              </p>
+            </div>
+          </div>
+        </div>
+       
+
         <div>
           <br />
           <br />
           <span
-            class="badge rounded-pill bg-secondary font-weight-bold p-3"
+            class="badge rounded-pill bg-secondary font-weight-light p-3"
             style="font-size: medium; color: white"
           >
-            Some things I am currently learning:</span
+            Some things I am currently learning</span
           >
         </div>
         <div class="row mt-5" >
@@ -278,7 +280,7 @@
     <section class="section bg-funfact" id="funfact">
       <div class="container">
         <div>
-          <h3 class="text-center text-secondary">Some facts about me. Hover to find out more!</h3>
+          <h3 class="text-center text-dark font-weight-light">Some facts about me. Hover to find out more!</h3>
         </div>
         <div class="row" id="counter">
           <div class="col-lg-3">
@@ -317,7 +319,7 @@
           <div class="col-lg-12">
             <div class="text-center mx-auto section-main-title">
               <h2>
-                <span class="font-weight-bold">Education</span>
+                <span class="font-weight-light">Education</span>
                 <span><img src="images/edu-removebg-preview.png" width="55px" alt=""></span>
               </h2>
               <div class="main-title-border">
@@ -423,8 +425,8 @@
       <div class="container" data-aos="zoom-in">
         <div class="row">
           <div class="col-lg-12">
-            <div class="text-center text-white">
-              <h1>"Happiness often sneaks in through a door you didn’t know you left open.” </h1>
+            <div class="text-center text-white" >
+              <h1 style= "font-size: xx-large; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">"Happiness often sneaks in through a door you didn’t know you left open.” </h1>
               <div class="mt-4">
                 <a class="btn btn-outline-custom">John Barrymore</a>
               </div>
@@ -440,8 +442,8 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-12">
-            <div class="text-center mx-auto section-main-title">
-              <h2>
+            <div class="text-center mx-auto section-main-title font-weight-light">
+              <h2 class="font-weight-light">
                 <span class="font-weight-bold">Subscribe</span> to Newsletter
               </h2>
               <div class="main-title-border">
@@ -474,7 +476,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-12">
             <div class="text-center mx-auto section-main-title">
-              <h2>The <span class="font-weight-bold">Blog</span>
+              <h2 class ='font-weight-light'>The <span class="font-weight-bold">Blog</span>
                 <img src="images/read.png" width="30px" alt="">
             </h2>
              
@@ -602,7 +604,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="text-center mx-auto section-main-title">
-              <h2><span class="font-weight-bold">Contact me</span>
+              <h2><span class="font-weight-light">Contact me</span>
                 <img src="images/test-removebg-preview.png" width="30px" alt="">
 
             </h2>
