--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
           <div class="col-lg-12">
             <div class="text-center mx-auto section-main-title font-weight-light">
               <h2 class="font-weight-light">
-                <span class="font-weight-bold">Subscribe</span> to Newsletter
+                Subscribe to Newsletter
               </h2>
               <div class="main-title-border">
                 <i class="mdi mdi-asterisk"></i>
@@ -476,7 +476,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-12">
             <div class="text-center mx-auto section-main-title">
-              <h2 class ='font-weight-light'>The <span class="font-weight-bold">Blog</span>
+              <h2 class ='font-weight-light'>The Blog
                 <img src="images/read.png" width="30px" alt="">
             </h2>
              
