changed blog display

--- a/index.html
+++ b/index.html
@@ -493,32 +493,28 @@
         </div>
         <div class="row mt-4 pt-4">
           <div class="col-lg-4 mt-3">
-            <div class="text-center rounded bg-white p-2">
-              <div class="img_blog">
+            <div class="text-center rounded  p-2">
+              <div class="img_blog " >
                 <img
                   src="images/blog/blog-1.jpg"
                   alt=""
                   class="img-fluid rounded mx-auto d-block"
                 />
               </div>
-              <div class="content_blog pt-3 pb-3">
+              <div class="content_blog pt-3 pb-3 card cb1 bg-funfact">
                 <div>
-                  <h5 class="font-weight-bold mb-0">
+                  <h5 class="font-weight-bold mb-0 mt-3" >
                     The Addiction Plaguing
                     <br />
                     Our Culture
                   </h5>
                 </div>
                 <div class="mt-3">
-                  <p class="font-weight-bold h6 mb-3">
-                    <h7 class="text-custom">Lifestyle</h7>
+                  <p class="font-weight-bold h6 mb-3" >
+                    <!-- <h7 >Lifestyle</h7> -->
                   </p>
 
-                  <p class="mt-3 desc_blog pl-2 pr-2 text-muted">
-                    It seems as if we live in a society that is addicted to
-                    getting it right. What is unique about being perfect? And
-                    how does that move our society forward as a whole?
-                  </p>
+
                   <p class="h6 mb-0">
                     <a
                       href="https://medium.com/@lizzie_59360/the-addiction-that-plagues-our-culture-d9d3d0d1f7db"
@@ -531,27 +527,27 @@
             </div>
           </div>
           <div class="col-lg-4 mt-3">
-            <div class="text-center rounded bg-white p-2">
+            <div class="text-center rounded  p-2">
               <div class="blog_video position-relative">
                 <a href="https://www.youtube.com/watch?v=72ZVFzu0WnE" class="blog_play"
                   >
                   <img src="images/play.png" width="50px" alt="">
                 </a>
               </div>
-              <div class="content_blog pt-3 pb-3">
+              <div class="content_blog pt-3 pb-3 card bg-funfact ">
                 <div>
-                    <h5 class="font-weight-bold mb-0">
+                    <h5 class="font-weight-bold mb-0  mt-3 ">
                         <br>
-                        If you're a tourist in Scandinavia, avoid these 6 things</h5>
+                        For Scandinavian tourists... </h5>
                 </div>
                 <div class="mt-3">
                   <p class="font-weight-bold h6 mb-3">
-                    <h7 class="text-custom">Travel</h7>
+                    <!-- <h7 class="text-custom">Travel</h7> -->
                   </p>
-
+<!-- 
                   <p class="mt-3 desc_blog pl-2 pr-2 text-muted">
                     Ask any Scandinavian, and I am fairly certain they will recognize themselves in some (if not all) paragraphs.
-                  </p>
+                  </p> -->
                   <p class="h6 mb-0">
                     <a
                       href="https://medium.com/self-less/if-youre-a-tourist-in-scandinavia-don-t-do-these-6-things-3c64b1fc6e63"
@@ -564,29 +560,30 @@
             </div>
           </div>
           <div class="col-lg-4 mt-3">
-            <div class="text-center rounded bg-white p-2">
-              <div class="content_blog pt-3 pb-3">
+            <div class="text-center rounded  p-2 ">
+              <div class="content_blog pt-3 pb-3 card cb1 bg-funfact">
                 <div>
-                  <h5 class="font-weight-bold mb-0">
-                    Eat spicy food, live longer!
+                  <h5 class="font-weight-bold mb-0 mt-3">
+                    <br>Eat spicy food, live longer!
                   </h5>
                 </div>
                 <div class="mt-3">
                   <p class="font-weight-bold h6 mb-3">
-                    <h7 class="text-custom">Food</h7>
-                  </p>
+                    <!-- <h7 class="text-custom">Food</h7> -->
+                  <!-- </p>
 
                   <p class="mt-3 desc_blog pl-2 pr-2 text-muted">
                     In a large study, analyzing more than 500,000 people, those
                     who ate spicy foods 6 or 7 days a week had a 14% lower risk
                     of dying than people who ate spicy foods less than once a
                     week.
-                  </p>
+                  </p> -->
                   <p class="h6 mb-0">
                     <a
                       href="https://medium.com/@andrewmerle/eat-spicy-food-live-longer-c8160290fc1b"
                       class="text-muted font-weight-bold"
-                      >Read More...</a
+                      >
+                      Read More...</a
                     >
                   </p>
                 </div>
