--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
         <div class="row pt-4 pb-4">
           <div class="col-lg-12">
             <div class="text-center mt-2 mb-1 ">
-              <p class=" text-muted " style="font-size: 20px">Just a random footer. Hope you have a nice day!</p>
+              <p class=" text-muted font-weight-light" style="font-size: 20px ">Just a random footer. Hope you have a nice day!</p>
             </div>
           </div>
         </div>
