button change color

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             <div class="text-center subcribe-newsletter mt-4">
               <form class="mx-auto position-relative">
                 <input type="text" placeholder="Email" />
-                <button type="submit" class="btn btn-custom">Subscribe</button>
+                <button type="submit" disabled class=" btn-outline-custom-2 ">Subscribe</button>
               </form>
             </div>
           </div>
