--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
             <div class="text-center text-white" >
               <h1 style= "font-size: xx-large; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">"Happiness often sneaks in through a door you didn’t know you left open.” </h1>
               <div class="mt-4">
-                <a class="btn btn-outline-custom">John Barrymore</a>
+                <a class="btn btn-outline-custom" data-cursor-text="Make a wish">John Barrymore</a>
               </div>
             </div>
           </div>
@@ -455,7 +455,7 @@
     <!-- END CTA -->
 
     <!-- START SUBCRIBE  -->
-    <section class="section" id="subscribe">
+    <section class="section" id="subscribe" >
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-12">
@@ -761,7 +761,7 @@
     <script>
       AOS.init();
     </script>  
-    <!-- curosr -->
+    <!-- cursor -->
       <script>
         const cursor = new MouseFollower({
         container: document.body  ,
