--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     <!-- END FUNFACTS -->
 
     <!-- START EDU -->
-    <section class="section" id="education">
+    <section class="section education" id="education">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-12">
@@ -331,9 +331,9 @@
           </div>
         </div>
         <div class="row mt-4 pt-4" >
-          <div class="col-lg-12" data-aos="fade-up">
-            <div class="cv_edu_exp mt-3">
-              <div class="cv_edu_exp_box mt-4">
+          <div class="col-lg-12 " data-aos="fade-up">
+            <div class="cv_edu_exp mt-3  ">
+              <div class="cv_edu_exp_box mt-4 glass_card glass_card_1 ">
                 <div class="row">
                   <div class="col-lg-20">
                     <div
@@ -341,7 +341,7 @@
                     >
                       2021 - 2025
                     </div>
-                    <div class="cb_edu_exp_detail">
+                    <div class="cb_edu_exp_detail ">
                       <h4 data-cursor-img="images/smu.jpeg">Studied at Singapore Management University</h4>
                       <p class="cv_desc mb-0">
                         Activities and societies: </p>
@@ -384,9 +384,9 @@
                 </div>
               </div>
 
-              <div class="cv_edu_exp_box mt-4">
+              <div class="cv_edu_exp_box mt-4 glass_card">
                 <div class="row">
-                  <div class="col-lg-12" data-aos="fade-up">
+                  <div class="col-lg-12  " data-aos="fade-up">
                     <div
                       class="cv_edu_exp_year font-weight-bold text-custom position-relative"
                     >
